--- a/src/main/resources/static/pages/answer/addPaperdetail.html
+++ b/src/main/resources/static/pages/answer/addPaperdetail.html
@@ -64,6 +64,26 @@
 				</div>
 			</div>
 
+			<div class='form-group'>
+				<label class='col-md-2 control-label'>科普详情</label>
+				<div class='col-md-10'>
+					<input class='form-control' placeholder='科普详情' type='text' name='detail' id='detail' data-bv-notempty='true' data-bv-notempty-message='科普详情 不能为空'>
+				</div>
+			</div>
+
+			<div class='form-group'>
+				<label class='col-md-2 control-label'>图片上传</label>
+				<div class="layui-upload col-md-10">
+					<button type="button" class="layui-btn" id="test2">上传图片</button>
+					<div class="layui-upload-list">
+						<img class="layui-upload-img" id="demo2" style="height: 50px;width: 50px">
+						<input  type='text' name='purl' id='purl' hidden>
+					</div>
+				</div>
+			</div>
+
+
+
 			<div class="form-actions">
 				<div class="row" align="center">
 					<div class="col-md-12">
@@ -83,11 +103,34 @@
 	<script type="text/javascript" src="../../js/plugin/bootstrapvalidator/bootstrapValidator.min.js"></script>
 	<script type="text/javascript" src="../../js/common.js"></script>
 	<script type="text/javascript" src="../../layui/layui.js"></script>
+	<link rel="stylesheet" href="../../layui/css/layui.css" />
 	<script type="text/javascript">
-		layui.use(['layer','laydate'], function(){
+		layui.use(['layer','laydate','upload'], function(){
 		    var layer = layui.layer;
+
+			upload = layui.upload;
+
+			//图片上传
+			upload.render({
+				elem: '#test2'
+				,url: '/files' //改成您自己的上传接口
+				,multiple: true
+				,before: function(obj){
+					//预读本地文件示例，不支持ie8
+					obj.preview(function(index, file, result){
+						console.log(result)
+						$('#demo2').attr('src', result); //图片链接（base64）
+						//$('#demo2').append('<img style="height: 50px;width: 50px" src="'+ result +'" alt="'+ file.name +'" class="layui-upload-img">')
+					});
+				}
+				,done: function(res){
+					//上传完毕
+					console.log(res.url)
+					$('#purl').attr('value',res.url);
+				}
+			});
 		});
-		
+
 		function add() {
 			$('#form').bootstrapValidator();
 			var bootstrapValidator = $("#form").data('bootstrapValidator');
@@ -97,6 +140,7 @@
 		    }
 		    
 		    var formdata = $("#form").serializeObject();
+		    console.log(formdata)
 
 			$.ajax({
 				type : 'post',
