--- a/src/main/resources/static/pages/score/scoreList.html
+++ b/src/main/resources/static/pages/score/scoreList.html
@@ -24,11 +24,11 @@
 										</div>
 									</form>
 	                   			</td>
-	                   			<td align="right">
-	                   				<button class="layui-btn layui-btn-sm" onclick="location.href='addScore.html'">
-                                      <i class="layui-icon">&#xe608;</i> 添加
-                                    </button>
-	                   			</td>
+<!--	                   			<td align="right">-->
+<!--	                   				<button class="layui-btn layui-btn-sm" onclick="location.href='addScore.html'">-->
+<!--                                      <i class="layui-icon">&#xe608;</i> 添加-->
+<!--                                    </button>-->
+<!--	                   			</td>-->
 	                   		</tr> 
 	                    </table>
 					</div>
@@ -43,8 +43,7 @@
                                 <tr>
 									<th>id</th>
 									<th>用户编号</th>
-									<th>试卷编号</th>
-									<th>成绩</th>
+									<th>图片</th>
 									<th>创建时间</th>
 									<th>操作</th>
                                 </tr>
@@ -68,7 +67,9 @@
 <script type="text/javascript" src="../../js/my/permission.js"></script>
 <script type="text/javascript">
 var pers = checkPermission();
-
+var pro = window.location.protocol;
+var host = window.location.host;
+var domain = pro + "//" + host;
 var example;
 function init(){
 	example = 
@@ -90,8 +91,14 @@ function init(){
             "columns": [
 				{"data" : "sid", "defaultContent" : ""},
 				{"data" : "uid", "defaultContent" : ""},
-				{"data" : "pid", "defaultContent" : ""},
-				{"data" : "mark", "defaultContent" : ""},
+				{"data" : "shareUrl", "defaultContent" : "",
+                    "render": function (data, type, row) {
+                        var url = row['shareUrl'];
+                        var src =  domain + "/statics"+url;
+                        u = "<a target='_blank' href='" + src +"'><img width='30' src='" + src + "'></img></a>";
+                        return u;
+                    }},
+				// {"data" : "mark", "defaultContent" : ""},
 				{"data" : "createTime", "defaultContent" : ""},
 				{ 
 								"data": "", 
@@ -100,10 +107,11 @@ function init(){
 						        "render": function (data, type, row) {
                 		           var id = row['sid'];
                 		           var href = "updateScore.html?id=" + id;
-                                   var edit = buttonEdit(href, "", pers);
+                                  // var edit = buttonEdit(href, "", pers);
                 		           var del = buttonDel(id, "", pers);
-                                   return edit + del;
-                  	            }		
+                                   // return edit + del;
+                                   return del;
+                  	            }
 							},
                 
             ],
