--- a/src/main/resources/static/pages/wxuser/addWxUser.html
+++ b/src/main/resources/static/pages/wxuser/addWxUser.html
@@ -100,7 +100,7 @@
 
 			$.ajax({
 				type : 'post',
-				url : '/wxUsers',
+				url : '/wxusers',
 				contentType: "application/json; charset=utf-8",  
 				data : JSON.stringify(formdata),
 				success : function(data) {
