--- a/src/main/resources/static/pages/wxuser/updateWxUser.html
+++ b/src/main/resources/static/pages/wxuser/updateWxUser.html
@@ -97,7 +97,7 @@
 			if(id != ""){
 				$.ajax({
 					type : 'get',
-					url : '/wxUsers/'+id,
+					url : '/wxusers/'+id,
 					async : false,
 					success : function(data) {
 						$('#id').val(data.id);
@@ -128,7 +128,7 @@
 
 			$.ajax({
 				type : 'put',
-				url : '/wxUsers',
+				url : '/wxusers',
 				contentType: "application/json; charset=utf-8",  
 				data : JSON.stringify(formdata),
 				success : function(data) {
